@@ -64,6 +64,8 @@ namespace FeatureAdmin
             this.splitContainerLeftWindow = new System.Windows.Forms.SplitContainer();
             this.splitContainerLeftUpperWebAppAndSiteColl = new System.Windows.Forms.SplitContainer();
             this.splitContainerLeftDownWebsAndLogs = new System.Windows.Forms.SplitContainer();
+            this.btnFindAllActivationsFeature = new System.Windows.Forms.Button();
+            this.btnLoadAllFeatureActivations = new System.Windows.Forms.Button();
             this.tabControl1.SuspendLayout();
             this.FarmFeatures.SuspendLayout();
             this.RemoveFeatures.SuspendLayout();
@@ -366,6 +368,8 @@ namespace FeatureAdmin
             // 
             // FarmFeatures
             // 
+            this.FarmFeatures.Controls.Add(this.btnLoadAllFeatureActivations);
+            this.FarmFeatures.Controls.Add(this.btnFindAllActivationsFeature);
             this.FarmFeatures.Controls.Add(this.btnActivateSPWeb);
             this.FarmFeatures.Controls.Add(this.btnActivateSPSite);
             this.FarmFeatures.Controls.Add(this.btnActivateSPWebApp);
@@ -425,11 +429,11 @@ namespace FeatureAdmin
             // 
             this.btnFindActivatedFeature.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left)));
             this.btnFindActivatedFeature.ForeColor = System.Drawing.Color.MidnightBlue;
-            this.btnFindActivatedFeature.Location = new System.Drawing.Point(255, 495);
+            this.btnFindActivatedFeature.Location = new System.Drawing.Point(247, 495);
             this.btnFindActivatedFeature.Name = "btnFindActivatedFeature";
-            this.btnFindActivatedFeature.Size = new System.Drawing.Size(200, 23);
+            this.btnFindActivatedFeature.Size = new System.Drawing.Size(195, 23);
             this.btnFindActivatedFeature.TabIndex = 19;
-            this.btnFindActivatedFeature.Text = "Find where activated in Farm";
+            this.btnFindActivatedFeature.Text = "Find one activation";
             this.btnFindActivatedFeature.UseVisualStyleBackColor = true;
             this.btnFindActivatedFeature.Click += new System.EventHandler(this.btnFindActivatedFeature_Click);
             // 
@@ -591,6 +595,30 @@ namespace FeatureAdmin
             this.splitContainerLeftDownWebsAndLogs.SplitterDistance = 146;
             this.splitContainerLeftDownWebsAndLogs.TabIndex = 0;
             // 
+            // btnFindAllActivationsFeature
+            // 
+            this.btnFindAllActivationsFeature.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left)));
+            this.btnFindAllActivationsFeature.ForeColor = System.Drawing.Color.MidnightBlue;
+            this.btnFindAllActivationsFeature.Location = new System.Drawing.Point(247, 524);
+            this.btnFindAllActivationsFeature.Name = "btnFindAllActivationsFeature";
+            this.btnFindAllActivationsFeature.Size = new System.Drawing.Size(195, 23);
+            this.btnFindAllActivationsFeature.TabIndex = 22;
+            this.btnFindAllActivationsFeature.Text = "Find all activations";
+            this.btnFindAllActivationsFeature.UseVisualStyleBackColor = true;
+            this.btnFindAllActivationsFeature.Click += new System.EventHandler(this.btnFindAllActivationsFeature_Click);
+            // 
+            // btnLoadAllFeatureActivations
+            // 
+            this.btnLoadAllFeatureActivations.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left)));
+            this.btnLoadAllFeatureActivations.ForeColor = System.Drawing.Color.MidnightBlue;
+            this.btnLoadAllFeatureActivations.Location = new System.Drawing.Point(247, 553);
+            this.btnLoadAllFeatureActivations.Name = "btnLoadAllFeatureActivations";
+            this.btnLoadAllFeatureActivations.Size = new System.Drawing.Size(195, 23);
+            this.btnLoadAllFeatureActivations.TabIndex = 23;
+            this.btnLoadAllFeatureActivations.Text = "Load all activation data";
+            this.btnLoadAllFeatureActivations.UseVisualStyleBackColor = true;
+            this.btnLoadAllFeatureActivations.Click += new System.EventHandler(this.btnLoadAllFeatureActivations_Click);
+            // 
             // FrmMain
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
@@ -672,6 +700,8 @@ namespace FeatureAdmin
         private System.Windows.Forms.SplitContainer splitContainerLeftWindow;
         private System.Windows.Forms.SplitContainer splitContainerLeftUpperWebAppAndSiteColl;
         private System.Windows.Forms.SplitContainer splitContainerLeftDownWebsAndLogs;
+        private System.Windows.Forms.Button btnLoadAllFeatureActivations;
+        private System.Windows.Forms.Button btnFindAllActivationsFeature;
     
     }
 }
